result/subtask05-casting/testcase01.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
> Insert `x` (addr: 1) to scope level 1
INT_LIT 3
> Insert `y` (addr: 2) to scope level 1
FLOAT_LIT 1078523331
> Insert `z1` (addr: 3) to scope level 1
/home/share/hw2/input/subtask05-casting/testcase01.cpp:4:11: error:  syntax error
     4 |    int z1, 2;
       |          ^
Total lines: 4
